# feature-manifolds

./: .gitignore  CLAUDE.md  README.md  paper.md  pyproject.toml  requirements.txt  visualize_manifold.py
data/: k50_clean.txt  synthetic_linebreak_k100.txt  synthetic_linebreak_k20.txt  synthetic_linebreak_k25.txt  synthetic_linebreak_k30.txt  synthetic_linebreak_k35.txt  synthetic_linebreak_k40.txt  synthetic_linebreak_k45.txt  synthetic_linebreak_k50.txt  synthetic_linebreak_k55.txt  synthetic_linebreak_k60.txt  synthetic_linebreak_k65.txt  synthetic_linebreak_k70.txt  synthetic_linebreak_k75.txt  synthetic_linebreak_k80.txt  synthetic_linebreak_k85.txt  synthetic_linebreak_k90.txt  synthetic_linebreak_k95.txt  synthetick-50.txt
model/: dynamical_model.py
src/: actn_manifold.py  actn_manifold_config.yaml  feat_manifold.py  feat_manifold_config.yaml  inference.py  newline_prob.py  playground.ipynb
