[project]
name = "manifold-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "llvmlite==0.45.1",
    "matplotlib==3.10.7",
    "narwhals==2.10.2",
    "numba==0.62.1",
    "numpy==2.3.4",
    "packaging==25.0",
    "pillow==12.0.0",
    "plotly==6.4.0",
    "pynndescent==0.5.13",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "umap==0.1.1",
    "umap-learn==0.5.9.post2",
]
